--- a/index.html
+++ b/index.html
@@ -93,18 +93,26 @@
         <section id="home" class="hero section">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">
-                        <span class="text-gradient">Shaik Samdan</span>
-                    </h1>
-                    <h2 class="hero-subtitle">Data & AI Practitioner</h2>
-                    <p class="hero-tagline">Transforming data into intelligent solutions</p>
-                    <div class="hero-buttons">
-                        <button onclick="viewResume()" class="btn btn-secondary">
-                            <span>Download Resume</span>
-                        </button>
-                        <a href="#projects" class="btn btn-primary">
-                            <span>View Projects <span style="font-size: 1.2em; vertical-align: 0.0em; display: inline-block;">↓</span></span>
-                        </a>
+                    <div class="hero-text-content">
+                        <h1 class="hero-title">
+                            <span class="text-gradient">Shaik Samdan</span>
+                        </h1>
+                        <h2 class="hero-subtitle">Data & AI Practitioner</h2>
+                        <p class="hero-tagline">Transforming data into intelligent solutions</p>
+                        <div class="hero-buttons">
+                            <button onclick="viewResume()" class="btn btn-secondary">
+                                <span>Download Resume</span>
+                            </button>
+                            <a href="#projects" class="btn btn-primary">
+                                <span>View Projects <span style="font-size: 1.2em; vertical-align: 0.0em; display: inline-block;">↓</span></span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="hero-image-container">
+                        <div class="image-wrapper">
+                            <img src="assets/images/professional.png" alt="Shaik Samdan" class="hero-image">
+                            <div class="image-border"></div>
+                        </div>
                     </div>
                 </div>
             </div>
