--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <h1 class="hero-title">
                             <span class="text-gradient">Shaik Samdan</span>
                         </h1>
-                        <h2 class="hero-subtitle">Data & AI Practitioner</h2>
+                        <h2 class="hero-subtitle">Data Science & AI Practitioner</h2>
                         <p class="hero-tagline">Transforming data into intelligent solutions</p>
                         <div class="hero-buttons">
                             <button onclick="viewResume()" class="btn btn-secondary">
@@ -123,7 +123,7 @@
             <div class="container">
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content glass-card">
-                    <p>Passionate Data & AI Practitioner with expertise in Machine Learning, Deep Learning, and Natural Language Processing. I specialize in transforming complex data into actionable insights and building intelligent systems that solve real-world problems.</p>
+                    <p>Passionate Data Scientist with expertise in Machine Learning, Deep Learning, and Natural Language Processing. I specialize in transforming complex data into actionable insights and building intelligent systems that solve real-world problems.</p>
                     <p>My journey in data science and AI is driven by curiosity and a commitment to innovation. I combine strong technical skills in Python, SQL, and cloud technologies with a deep understanding of statistical analysis and machine learning algorithms to deliver impactful solutions.</p>
                 </div>
             </div>
@@ -184,9 +184,10 @@
                     <div class="skill-category">
                         <h3 class="category-title">Visualization & Tools</h3>
                         <div class="skill-cards">
-                            <div class="skill-card glass-card">Seaborn</div>
+                            <div class="skill-card glass-card">Tableau</div>
                             <div class="skill-card glass-card">Plotly</div>
                             <div class="skill-card glass-card">Matplotlib</div>
+                            <div class="skill-card glass-card">Seaborn</div>
                         </div>
                     </div>
                     <!-- Databases -->
@@ -260,10 +261,10 @@
                             <h4 class="timeline-company">AceEngineer, Houston, TX (Remote)</h4>
                             <span class="timeline-date">Sept 2024 - Aug 2025</span>
                             <ul class="timeline-points">
-                                <li>Collected and aggregated data from 10+ diverse sources using advanced web scraping tools and strategies, building comprehensive datasets with over 100,000 records.</li>
+                                <li>Collected and aggregated data from 10+ diverse sources using advanced web scraping tools and strategies, reducing manual data collection time by 85% and improving data accuracy to 99.2%.</li>
                                 <li>Performed comprehensive data analysis and created 25+ insightful visualizations to support data-driven decision making, improving business insights by 40%.</li>
-                                <li>Built and maintained 8 interactive dashboards to deliver impactful business insights, reducing reporting time by 60%.</li>
-                                <li>Contributed to open-source repositories with 500+ commits, fostering collaboration and supporting the wider data community with 1,000+ total downloads.</li>
+                                <li>Developed automated ML workflows reducing model training time by 65% and improving prediction accuracy by 50%.</li>
+                                <li>Contributed to open-source repositories by automating repetitive business processes through Python automation, saving 15-20 hours per week across teams.</li>
                             </ul>
                         </div>
                     </div>
