--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="hero-content">
                     <div class="hero-text-content">
                         <h1 class="hero-title">Shaik Samdan</h1>
-                        <p class="hero-tagline">I build Scalable AI/ML workflows for businesses</p>
+                        <p class="hero-tagline">I Craft Intelligent AI/ML workflows for businesses</p>
                     </div>
                     <div class="hero-image-container">
                         <img src="assets/images/professional.png" alt="Shaik Samdan" class="hero-image">
@@ -143,8 +143,8 @@
             <div class="container">
                 <div class="intro-content">
                     <p class="intro-text">
-                        Hi <span class="emoji-wave">👋</span>! I'm a Junior Data Scientist in the making, With a strong passion for building
-                        <span class="highlight-badge highlight-green">Scalable AI/ML Workflows</span>,
+                        Hi <span class="emoji-wave">👋</span>! I'm a Junior Data Scientist With a strong passion for transforming raw data into 
+                        <span class="highlight-badge highlight-green">meaningful stories</span>, <span class="highlight-badge highlight-green"> that drive decision-making </span>
                         I continuously evolve, crafting AI-powered automated solutions through
                         <span class="highlight-badge highlight-purple">code, data, and innovation</span>.
                     </p>
@@ -165,7 +165,7 @@
                     <div class="about-section-content">
                         <div class="about-text-column">
                             <h2 class="about-section-title">About Me</h2>
-                            <p class="about-section-description">I'm a Junior data scientist in the making, Specialized in creating scalable AI/ML applications.</p>
+                            <p class="about-section-description">I'm a Junior data scientist in the making, Specialized in implementing extensible AI/ML applications.</p>
                         </div>
                         <div class="about-profile-card">
                             <img src="assets/images/professional.png" alt="Samdan Shaik" class="profile-card-image">
@@ -187,8 +187,8 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Experience</h2>
-                        <p class="about-section-text">I Previously worked as a data scientist at <a href="https://www.linkedin.com/company/aceengineer/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Developing AI based solutions for clients using skills like Python, ML, DL, NLP, Data Visualization and MLOps.</p>
-                        <p class="about-section-text">Also completed my graduation at RGUKT Srikakulam university with Computer science specialization. Where I learnt fundamentals of programming, data structures, algorithms, and software development.</p>
+                        <p class="about-section-text">I Previously worked as a data scientist at <a href="https://www.linkedin.com/company/aceengineer/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Enforcing AI based solutions for clients using skills like Python, ML, DL, NLP, Data Visualization and MLOps.</p>
+                        <p class="about-section-text">Also, I have a strong background in statistical analysis, predictive modeling, machine learning techniques, and deriving actionable insights from large datasets.</p>
                     </div>
                 </div>
             </div>
@@ -199,7 +199,7 @@
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Education</h2>
                         <p class="about-section-text">Completed my Bachelors of Technology in Computer Science and Engineering at Rajiv Gandhi University of Knowledge Technologies, Srikakulam (<a href="https://rguktsklm.ac.in/" target="_blank" rel="noopener noreferrer" class="section-inline-link">RGUKT Srikakulam</a>).</p>
-                        <p class="about-section-text">Graduated with a GPA of 7.45 / 10</p>
+                        <p class="about-section-text">  Qualified with a GPA of 7.45 / 10</p>
                     </div>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Interests</h2>
-                        <p class="about-section-text">I am interested in unfolding scalable AI/ML Workflows and enjoys collaborating with diverse teams to bring ideas to life. Beyond coding, I regularly read blogs on AI Trend/Updates. In my free time, I enjoy interacting with new people, exploring innovative ideas and working on projects that excites me.</p>
+                        <p class="about-section-text">I am interested in unfolding versatile Machine learning Workflows and enjoys collaborating with diverse teams to bring ideas to life. Beyond coding, I regularly read blogs on AI Trends/Updates. In my free time, I enjoy interacting with new people, exploring innovative ideas and working on projects that excites me.</p>
                     </div>
                 </div>
             </div>
@@ -238,7 +238,7 @@
             <!-- Section 2: Hero/Introduction -->
             <div class="services-hero-section">
                 <div class="container">
-                    <h2 class="services-hero-title">What I Do</h2>
+                    <h2 class="services-hero-title">The Skills I Bring</h2>
                 </div>
             </div>
 
@@ -393,7 +393,6 @@
                     <span class="breadcrumb-current">Portfolio</span>
                 </nav>
                 <h2 class="section-title">Featured Work</h2>
-                <p class="section-subtitle">Showcasing standout projects</p>
 
                 <div class="projects-list">
                     <!-- Project 1: Ecom-Sales Predictor -->
@@ -403,7 +402,7 @@
                         </div>
                         <div class="project-details-column">
                             <h3 class="project-item-title">Ecom-Sales Predictor</h3>
-                            <p class="project-item-summary">Developed a sequential ML pipeline to predict product success using sales data.</p>
+                            <p class="project-item-summary">A sequential ML pipeline to predict product success using sales data.</p>
                             <a href="#project-ecom" class="project-view-link">View Project</a>
                         </div>
                     </div>
@@ -417,7 +416,7 @@
                         </div>
                         <div class="project-details-column">
                             <h3 class="project-item-title">AI Forecast</h3>
-                            <p class="project-item-summary">Built an extensive market intelligence system to predict global AI market trends.</p>
+                            <p class="project-item-summary">An extensive market intelligence system to predict global AI market trends.</p>
                             <a href="#project-ai-forecast" class="project-view-link">View Project</a>
                         </div>
                     </div>
@@ -431,7 +430,7 @@
                         </div>
                         <div class="project-details-column">
                             <h3 class="project-item-title">Oil & Gas Data Analysis</h3>
-                            <p class="project-item-summary">Contributed to Oil & Gas Data project analyzing BSEE datasets, creating visualizations and insights.</p>
+                            <p class="project-item-summary">Oil & Gas Data project analyzing BSEE datasets, creating visualizations and insights.</p>
                             <a href="#project-oil-gas" class="project-view-link">View Project</a>
                         </div>
                     </div>
@@ -465,6 +464,10 @@
                         <div class="tech-item">NumPy</div>
                         <div class="tech-item">Machine Learning</div>
                         <div class="tech-item">Data Analysis</div>
+                    </div>
+                    <hr class="tech-stack-separator">
+                    <div class="project-description">
+                        <p>An advanced e-commerce sales prediction system that leverages machine learning to predict product sales outcome, forecast sales trends, analyze customer behavior, and provide actionable insights. The system combines traditional ML models with deep learning approaches and includes a backend FastAPI, comprehensive Streamlit dashboard for real-time analysis and predictions.</p>
                     </div>
                 </div>
 
@@ -508,6 +511,10 @@
                         <div class="tech-item">Pandas</div>
                         <div class="tech-item">Visualization</div>
                     </div>
+                    <hr class="tech-stack-separator">
+                    <div class="project-description">
+                        <p>A comprehensive machine learning system that analyzes global AI market trends, predicts future growth patterns, and provides actionable insights for investors and businesses in the artificial intelligence sector. The project leverages advanced data science techniques to process and analyze AI market data from multiple sources, providing detailed insights.</p>
+                    </div>
                 </div>
 
                 <div class="project-features">
@@ -549,6 +556,10 @@
                         <div class="tech-item">Analytics</div>
                         <div class="tech-item">Pandas</div>
                         <div class="tech-item">Matplotlib</div>
+                    </div>
+                    <hr class="tech-stack-separator">
+                    <div class="project-description">
+                        <p>Oil and Gas Data Analysis project focused on extracting and analyzing data from the Bureau of Safety and Environmental Enforcement (BSEE) website. The project leverages comprehensive Data Analysis and Visualization techniques for business insights.</p>
                     </div>
                 </div>
 
