--- a/index.html
+++ b/index.html
@@ -41,7 +41,37 @@
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"></noscript>
+
+    <!-- Critical inline styles to prevent layout shift -->
+    <style>
+        /* Critical CSS for initial render stability */
+        .navbar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background: rgba(255, 255, 255, 0.95);
+            z-index: 100;
+            padding: 1rem 0;
+            min-height: 60px;
+            height: auto;
+        }
+
+        .services-breadcrumb-section,
+        .services-header-section,
+        .services-hero-section,
+        .services-boxes-section,
+        .services-techstack-section {
+            min-height: auto !important;
+        }
+
+        /* Font fallback to prevent layout shift */
+        body {
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        }
+    </style>
 
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
