--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Preload critical font weights to prevent layout shift -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=optional" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=optional">
 
     <!-- Critical inline styles to prevent layout shift -->
     <style>
@@ -59,19 +59,22 @@
             padding: 1rem 0;
             min-height: 60px;
             height: auto;
-        }
-
-        .services-breadcrumb-section,
-        .services-header-section,
-        .services-hero-section,
-        .services-boxes-section,
-        .services-techstack-section {
-            min-height: auto !important;
+            contain: layout;
+            will-change: box-shadow;
         }
 
         /* Font fallback to prevent layout shift */
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            font-size-adjust: 0.5;
+        }
+
+        /* Prevent font swap layout shifts */
+        * {
+            font-synthesis: none;
+            text-rendering: optimizeLegibility;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
     </style>
 
