--- a/index.html
+++ b/index.html
@@ -351,6 +351,14 @@
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/plotly/plotly-original.svg" alt="Plotly" class="skill-icon-img">
                                     <span class="skill-name">Plotly</span>
                                 </div>
+                                <div class="skill-item">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg" alt="Flask" class="skill-icon-img">
+                                    <span class="skill-name">Flask</span>
+                                </div>
+                                <div class="skill-item">
+                                    <img src="assets/icons/MLflow_idOeRd2gAI_0.png" alt="MLflow" class="skill-icon-img">
+                                    <span class="skill-name">MLflow</span>
+                                </div>
                             </div>
                         </div>
 
