--- a/index.html
+++ b/index.html
@@ -374,6 +374,10 @@
                                     <img src="assets/icons/MLflow_idOeRd2gAI_0.png" alt="MLflow" class="skill-icon-img">
                                     <span class="skill-name">MLflow</span>
                                 </div>
+                                <div class="skill-item">
+                                    <img src="assets/icons/azure ml.png" alt="Azure ML" class="skill-icon-img">
+                                    <span class="skill-name">Azure ML</span>
+                                </div>
                             </div>
                         </div>
 
