--- a/index.html
+++ b/index.html
@@ -371,12 +371,14 @@
                                     <span class="skill-name">Flask</span>
                                 </div>
                                 <div class="skill-item">
-                                    <img src="assets/icons/MLflow_idOeRd2gAI_0.png" alt="MLflow" class="skill-icon-img">
-                                    <span class="skill-name">MLflow</span>
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/googlecloud/googlecloud-original.svg" alt="Google Cloud Platform" class="skill-icon-img">
+                                    <span class="skill-name">GCP</span>
                                 </div>
                                 <div class="skill-item">
-                                    <img src="assets/icons/azure ml.png" alt="Azure ML" class="skill-icon-img">
-                                    <span class="skill-name">Azure ML</span>
+                                    <svg class="skill-icon-img" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm0 2.4c5.302 0 9.6 4.298 9.6 9.6 0 5.302-4.298 9.6-9.6 9.6-5.302 0-9.6-4.298-9.6-9.6 0-5.302 4.298-9.6 9.6-9.6zM7.2 7.2v9.6h9.6V7.2H7.2z"/>
+                                    </svg>
+                                    <span class="skill-name">Render</span>
                                 </div>
                             </div>
                         </div>
