--- a/index.html
+++ b/index.html
@@ -424,6 +424,10 @@
                                     <span class="skill-name">GitHub Actions</span>
                                 </div>
                                 <div class="skill-item">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="Docker" class="skill-icon-img">
+                                    <span class="skill-name">Docker</span>
+                                </div>
+                                <div class="skill-item">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VS Code" class="skill-icon-img">
                                     <span class="skill-name">VS Code</span>
                                 </div>
@@ -538,11 +542,10 @@
                 <div class="project-features">
                     <h2 class="project-section-heading">Key Features</h2>
                     <ul class="features-list">
-                        <li>Sequential ML pipeline for product success prediction</li>
-                        <li>Achieved 100% accuracy on test dataset</li>
-                        <li>Improved baseline model performance significantly</li>
-                        <li>Automated data preprocessing and feature engineering</li>
-                        <li>Comprehensive model evaluation and validation</li>
+                        <li>Advanced ML Pipeline: Multi-model ensemble with XGBoost, LightGBM, and Neural Networks</li>
+                        <li>Interactive Dashboard: Real-time Streamlit interface for sales analysis and predictions</li>
+                        <li>Ensemble Learning: Meta-learning approach combining multiple models for superior accuracy</li>
+                        <li>API Service: FastAPI endpoints for programmatic access to predictions</li>
                     </ul>
                 </div>
             </div>
@@ -585,10 +588,10 @@
                     <h2 class="project-section-heading">Key Features</h2>
                     <ul class="features-list">
                         <li>Market intelligence system for AI trend prediction</li>
-                        <li>R² = 0.857 accuracy in forecasting</li>
-                        <li>Interactive Streamlit dashboard for visualization</li>
-                        <li>Real-time data analysis capabilities</li>
-                        <li>Comprehensive market insights and reporting</li>
+                        <li>Machine Learning Models - Multiple ML algorithms (Linear Regression, Random Forest, XGBoost, etc.)</li>
+                        <li>Interactive Dashboard - Streamlit-based web application with real-time analytics</li>
+                        <li>Geographic Analysis - Country and city-level AI popularity insights</li>
+                        <li>Performance Optimized - Efficient data processing with modern Python tools</li>
                     </ul>
                 </div>
             </div>
