update hero tagline and refine about section descriptions

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="hero-content">
                     <div class="hero-text-content">
                         <h1 class="hero-title">Shaik Samdan</h1>
-                        <p class="hero-tagline">I Craft Intelligent AI/ML workflows for businesses</p>
+                        <p class="hero-tagline">I Craft Intelligent data insights for the businesses</p>
                     </div>
                     <div class="hero-image-container">
                         <img src="assets/images/professional.png" alt="Shaik Samdan" class="hero-image">
@@ -215,7 +215,7 @@
                     <div class="about-section-content">
                         <div class="about-text-column">
                             <h2 class="about-section-title">About Me</h2>
-                            <p class="about-section-description">I'm a Junior data scientist in the making, Specialized in implementing extensible AI/ML applications.</p>
+                            <p class="about-section-description">I'm a Junior data scientist in the making, Specialized in translating data into actionable insights.</p>
                         </div>
                         <div class="about-profile-card">
                             <img src="assets/images/professional.png" alt="Samdan Shaik" class="profile-card-image">
@@ -237,7 +237,7 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Experience</h2>
-                        <p class="about-section-text">I Previously worked as a data scientist at <a href="https://www.linkedin.com/company/aceengineer/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Enforcing AI based solutions for clients using skills like Python, ML, DL, NLP, Data Visualization and MLOps.</p>
+                        <p class="about-section-text">I Previously worked as a data scientist at <a href="https://www.linkedin.com/company/aceengineer/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Enforcing AI based solutions for clients using skills like Python, ML, DL, NLP and Data Visualization.</p>
                         <p class="about-section-text">Also, I have a strong background in statistical analysis, predictive modeling, machine learning techniques, and deriving actionable insights from large datasets.</p>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Education</h2>
-                        <p class="about-section-text">Completed my Bachelors of Technology in Computer Science and Engineering at Rajiv Gandhi University of Knowledge Technologies, Srikakulam (<a href="https://rguktsklm.ac.in/" target="_blank" rel="noopener noreferrer" class="section-inline-link">RGUKT Srikakulam</a>).</p>
+                        <p class="about-section-text">Completed my Bachelors of Technology in Computer Science at Rajiv Gandhi University of Knowledge Technologies, Srikakulam (<a href="https://rguktsklm.ac.in/" target="_blank" rel="noopener noreferrer" class="section-inline-link">RGUKT Srikakulam</a>).</p>
                         <p class="about-section-text">  Qualified with a GPA of 7.45 / 10</p>
                     </div>
                 </div>
