--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <div class="about-section-content">
                         <div class="about-text-column">
                             <h2 class="about-section-title">About Me</h2>
-                            <p class="about-section-description">I'm a Junior data scientist in the making, Specialized in translating data into actionable insights.</p>
+                            <p class="about-section-description">I'm a Junior software engineer in the making, Specialized in translating data into actionable insights.</p>
                         </div>
                         <div class="about-profile-card">
                             <img src="assets/images/professional.png" alt="Samdan Shaik" class="profile-card-image">
@@ -237,7 +237,7 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Experience</h2>
-                        <p class="about-section-text">I Previously worked as a data scientist at <a href="https://www.linkedin.com/company/aceengineer/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Enforcing AI based solutions for clients using skills like Python, ML, DL, NLP and Data Visualization.</p>
+                        <p class="about-section-text">I Previously worked as a software engineer, data at <a href="https://www.linkedin.com/company/aceengineer/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Enforcing AI based solutions for clients using skills like Python, ML, DL, NLP and Data Visualization.</p>
                         <p class="about-section-text">Also, I have a strong background in statistical analysis, predictive modeling, machine learning techniques, and deriving actionable insights from large datasets.</p>
                     </div>
                 </div>
