--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="container">
                 <div class="intro-content">
                     <p class="intro-text">
-                        Hi <span class="emoji-wave">👋</span>! I'm a Junior Data Scientist With a strong passion for transforming raw data into 
+                        Hi <span class="emoji-wave">👋</span>! I'm an entry level software engineer With a strong passion for transforming raw data into 
                         <span class="highlight-badge highlight-green">meaningful stories</span>, <span class="highlight-badge highlight-green"> that drive decision-making </span>
                         I continuously evolve, crafting AI-powered automated solutions through
                         <span class="highlight-badge highlight-purple">code, data, and innovation</span>.
