update intro and about sections for clarity and focus on AI skills

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
             <div class="container">
                 <div class="intro-content">
                     <p class="intro-text">
-                        Hi <span class="emoji-wave">👋</span>! I'm an entry level software engineer With a strong passion for transforming raw data into 
-                        <span class="highlight-badge highlight-green">meaningful stories</span>, <span class="highlight-badge highlight-green"> that drive decision-making </span>
+                        Hi <span class="emoji-wave">👋</span>! I'm an entry level software engineer. Passionate about
+                        <span class="highlight-badge highlight-green">learning emerging AI techniques</span>.
                         I continuously evolve, crafting AI-powered automated solutions through
                         <span class="highlight-badge highlight-purple">code, data, and innovation</span>.
                     </p>
@@ -259,7 +259,7 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Interests</h2>
-                        <p class="about-section-text">I am interested in unfolding versatile Machine learning Workflows and enjoys collaborating with diverse teams to bring ideas to life. Beyond coding, I regularly read blogs on AI Trends/Updates. In my free time, I enjoy interacting with new people, exploring innovative ideas and working on projects that excites me.</p>
+                        <p class="about-section-text">I am interested in unfolding versatile software solutions and enjoys collaborating with diverse teams to bring ideas to life. Beyond coding, I regularly read blogs on AI Trends/Updates. In my free time, I enjoy interacting with new people, exploring innovative ideas and working on projects that excites me.</p>
                     </div>
                 </div>
             </div>
@@ -369,10 +369,6 @@
                                 <div class="skill-item">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg" alt="Flask" class="skill-icon-img">
                                     <span class="skill-name">Flask</span>
-                                </div>
-                                <div class="skill-item">
-                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/googlecloud/googlecloud-original.svg" alt="Google Cloud Platform" class="skill-icon-img">
-                                    <span class="skill-name">GCP</span>
                                 </div>
                                 <div class="skill-item">
                                     <svg class="skill-icon-img" viewBox="0 0 24 24" fill="currentColor">
